[tool.poetry]
name = "tillo_http_client"
version = "0.1.0"
description = ""
authors = ["tonynazarov <tonynazarov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
httpx = { extras = ["http2"], version = "^0.28.0" }
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/jaddek/tillo-client"