[project]
name = "jaddek_tillo_http_client"
version = "0.0.4"
description = "Tillo HTTP Client"
authors = [
    { name = "Anton Nazarov", email = "tonynazarov@gmail.com" }
]
readme = "README.md"
requires-python = "^3.9.0"

dependencies = [
    "httpx[http2] (>=0.28.1,<0.29.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/jaddek/tillo-http-client"